// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index check connection - app invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app configuration: app_id and private_key are required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - authentication missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid authentication configuration: type should be "token" or "app"",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid token configuration: personal_access_token is required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index streams - copilot seats (empty) 1`] = `
[
  {
    "empty": true,
    "org": "github",
  },
]
`;

exports[`index streams - copilot seats 1`] = `
[
  {
    "created_at": "2021-08-03T18:00:00-06:00",
    "last_activity_at": "2021-10-14T00:53:32-06:00",
    "org": "github",
    "pending_cancellation_date": null,
    "updated_at": "2021-09-23T15:00:00-06:00",
    "user": "octocat",
  },
  {
    "created_at": "2021-09-23T18:00:00-06:00",
    "last_activity_at": "2021-10-13T00:53:32-06:00",
    "org": "github",
    "pending_cancellation_date": "2021-11-01",
    "updated_at": "2021-09-23T15:00:00-06:00",
    "user": "octokitten",
  },
]
`;

exports[`index streams - copilot usage 1`] = `
[
  {
    "breakdown": [
      {
        "acceptances_count": 250,
        "active_users": 5,
        "editor": "vscode",
        "language": "python",
        "lines_accepted": 700,
        "lines_suggested": 900,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 200,
        "active_users": 2,
        "editor": "jetbrains",
        "language": "python",
        "lines_accepted": 300,
        "lines_suggested": 400,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 350,
        "active_users": 3,
        "editor": "vscode",
        "language": "ruby",
        "lines_accepted": 200,
        "lines_suggested": 500,
        "suggestions_count": 400,
      },
    ],
    "day": "2023-10-15",
    "org": "github",
    "total_acceptances_count": 800,
    "total_active_chat_users": 4,
    "total_active_users": 10,
    "total_chat_acceptances": 32,
    "total_chat_turns": 200,
    "total_lines_accepted": 1200,
    "total_lines_suggested": 1800,
    "total_suggestions_count": 1000,
  },
  {
    "breakdown": [
      {
        "acceptances_count": 200,
        "active_users": 2,
        "editor": "vscode",
        "language": "python",
        "lines_accepted": 300,
        "lines_suggested": 600,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 150,
        "active_users": 6,
        "editor": "jetbrains",
        "language": "python",
        "lines_accepted": 250,
        "lines_suggested": 300,
        "suggestions_count": 300,
      },
      {
        "acceptances_count": 150,
        "active_users": 3,
        "editor": "vscode",
        "language": "ruby",
        "lines_accepted": 150,
        "lines_suggested": 200,
        "suggestions_count": 200,
      },
    ],
    "day": "2023-10-16",
    "org": "github",
    "total_acceptances_count": 600,
    "total_active_chat_users": 8,
    "total_active_users": 12,
    "total_chat_acceptances": 57,
    "total_chat_turns": 426,
    "total_lines_accepted": 700,
    "total_lines_suggested": 1100,
    "total_suggestions_count": 800,
  },
]
`;

exports[`index streams - organizations 1`] = `
[
  {
    "created_at": "2008-01-14T04:33:35Z",
    "html_url": "https://github.com/octocat",
    "login": "github",
    "name": "github",
    "type": "Organization",
    "updated_at": "2014-03-03T18:58:10Z",
  },
]
`;

exports[`index streams - team memberships 1`] = `
[
  {
    "team": "justice-league",
    "user": "octocat",
  },
]
`;

exports[`index streams - teams 1`] = `
[
  {
    "description": "A great team.",
    "name": "Justice League",
    "org": "github",
    "parentSlug": null,
    "slug": "justice-league",
  },
]
`;

exports[`index streams - users 1`] = `
[
  {
    "email": "",
    "html_url": "https://github.com/octocat",
    "login": "octocat",
    "name": "Octocat",
    "org": "github",
    "type": "User",
  },
  {
    "email": "",
    "html_url": "https://github.com/octokitten",
    "login": "octokitten",
    "name": "Octokitten",
    "org": "github",
    "type": "User",
  },
]
`;
